[workspace.package]
version = "0.1.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-rpxy-l4"
repository = "https://github.com/junkurihara/rust-rpxy-l4"
license = "MIT"
readme = "./README.md"
edition = "2024"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
publish = false

[workspace]
members = ["proxy-l4-lib", "proxy-l4", "quic-tls", "examples"]
# exclude = ["submodules"]
resolver = "2"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
