[package]
name = "rpxy-l4-examples"
description = "examples and utils for rpxy-l4"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
publish = false

[dependencies]
# rustls = { version = "0.23.25", features = ["logging"] }
# rustls = { path = "../../rustls/rustls/", features = ["logging"] }
rustls = { git = "https://github.com/junkurihara/rustls.git", package = "rustls", branch = "ech-split-backend", features = [
  "logging",
] }
clap = { version = "4", features = ["derive"] }
# hickory-resolver = { version = "0.25.1", features = [
#   "webpki-roots",
#   "https-aws-lc-rs",
# ] }
log = { version = "0.4.27" }
env_logger = { version = "0.11" }
webpki-roots = { version = "0.26" }
base64 = { version = "0.22.1" }
tokio = { version = "1.44.2" }
