[package]
name = "rpxy-l4-lib"
description = "Core library of L4 reverse proxy written in Rust"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
derive_builder = { version = "0.20.2" }

# Connection pool
dashmap = { version = "6.1.0" }
ahash = { version = "0.8.11" }
aarc = { version = "0.3.2" }

# error handling
anyhow = { version = "1.0.95" }
thiserror = { version = "2.0.11" }

# traces and logs
tracing = { version = "0.1.41" }

# async runtime
tokio = { version = "1.43.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "io-util",
] }
tokio-util = { version = "0.7.13", default-features = false }

# network
socket2 = { version = "0.5.8" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19" }
