[package]
name = "rpxy-l4-lib"
description = "Core library of L4 reverse proxy written in Rust"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
publish.workspace = true

[features]
proxy-protocol = ["dep:ppp", "dep:ipnet"]

[dependencies]
derive_builder = { version = "0.20.2" }
bytes = { version = "1.11.1" }

# backend selector
rand = { version = "0.10.1" }

# Connection pool
dashmap = { version = "6.1.0" }
ahash = { version = "0.8.12" }

# proxy protocol (optional)
ppp = { version = "2.3.0", optional = true }
ipnet = { version = "2.12.0", optional = true }

# error handling
thiserror = { version = "2.0.18" }

# traces and logs
tracing = { version = "0.1.44" }

# async runtime
tokio = { version = "1.52.1", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "io-util",
] }
tokio-util = { version = "0.7.18", default-features = false }

# network
socket2 = { version = "0.6.3", features = ["all"] }
hickory-resolver = { version = "0.25.2" }

# quic and tls
quic-tls = { package = "rpxy-l4-quic-tls", path = "../quic-tls/" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.185" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.23" }
# quic and tls
