[package]
name = "rpxy-l4"
description = "L4 reverse proxy written in Rust"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rpxy-l4-lib = { path = "../proxy-l4-lib" }

# error handling
anyhow = { version = "1.0.98" }

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

# config
clap = { version = "4.5.44", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.9.5", default-features = false, features = [
  "parse",
  "serde",
] }
hot_reload = { version = "0.2.0" }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "std",
] }
serde_ignored = { version = "0.1.12" }
async-trait = { version = "0.1.88" }

# memory allocator
mimalloc = { version = "0.1.47", default-features = false }

# async runtime
tokio = { version = "1.47.1", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "io-util",
] }
tokio-util = { version = "0.7.16", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
