[package]
name = "rpxy-l4"
description = "L4 reverse proxy written in Rust"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rpxy-l4-lib = { path = "../proxy-l4-lib" }

# error handling
anyhow = { version = "1.0.99" }

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }

# config
clap = { version = "4.5.47", features = ["std", "cargo", "wrap_help"] }
toml = { version = "0.9.7", default-features = false, features = [
  "parse",
  "serde",
] }
hot_reload = { version = "0.2.0" }
serde = { version = "1.0.226", default-features = false, features = [
  "derive",
  "std",
] }
serde_ignored = { version = "0.1.14" }
async-trait = { version = "0.1.89" }

# memory allocator
mimalloc = { version = "0.1.48", default-features = false }

# async runtime
tokio = { version = "1.47.1", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "io-util",
] }
tokio-util = { version = "0.7.16", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
