[package]
name = "rpxy-l4"
description = "L4 reverse proxy written in Rust"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["proxy-protocol"]
# default = []
proxy-protocol = ["rpxy-l4-lib/proxy-protocol"]

[dependencies]
rpxy-l4-lib = { path = "../proxy-l4-lib", default-features = false }

# error handling
anyhow = { version = "1.0.102" }

# logging
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23" }

# config
clap = { version = "4.6.1", features = ["std", "cargo", "wrap_help"] }
toml = { version = "1.1.2", default-features = false, features = [
  "parse",
  "serde",
] }
hot_reload = { version = "0.3.6" }
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "std",
] }
serde_ignored = { version = "0.1.14" }
async-trait = { version = "0.1.89" }

# memory allocator
mimalloc = { version = "0.1.50", default-features = false }

# async runtime
tokio = { version = "1.52.1", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "io-util",
] }
tokio-util = { version = "0.7.18", default-features = false }
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }
