[package]
name = "rpxy-l4-quic-tls"
description = "Library to probe TLS and QUIC initial packets"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
# traces and logs
tracing = { version = "0.1.44" }

# error handling
anyhow = { version = "1.0.102" }
thiserror = { version = "2.0.18" }

# quic parser
hkdf = { version = "0.13.0" }
sha2 = { version = "0.11.0" }
aes = { version = "0.9.0" }
aes-gcm = { version = "0.11.0-rc.3" }
hex-literal = { version = "1.1.0" }

# ech
bytes = { version = "1.11.1" }
rand = { version = "0.10.1" }
base64 = { version = "0.22.1" }
# Use my own fork of HPKE until the upstream crate is update to support the braking change at RustCrypto crypto-common 0.2.1
# hpke = { version = "0.14.0-pre.2" }
hpke = { git = "https://github.com/junkurihara/rust-hpke", rev = "bfee2e6898e0540719ed94952b30a9124b1e797e" }


[dev-dependencies]
rustls = { version = "0.23.38" }
